--- a/about.html
+++ b/about.html
@@ -37,8 +37,9 @@
             <h2 data-translate="ourStory">Our Story</h2>
             <div class="about-us-content">
                 <div class="about-us-text">
-                    <p data-translate="storyText">Our journey began when Mama moved from China to Germany, bringing with her the authentic flavors and traditional recipes passed down through generations. In our kitchen, every dumpling is handcrafted with love, using only the finest ingredients and time-honored techniques.</p>
-                    <p data-translate="storyText2">Today, we're proud to share these authentic Chinese dumplings with our German community, offering a taste of home and tradition in every bite.</p>
+                    <p>Our family came to Germany as immigrants, and like many newcomers, we opened restaurants to make a living. While our restaurants served German-adapted Chinese food to appeal to local tastes, Mama always kept our authentic Chinese heritage alive in our home kitchen.</p>
+                    <p>During Chinese holidays and family celebrations, Mama would prepare traditional dishes that reminded us of our roots. Her dumplings, made with recipes passed down through generations, became the heart of our family gatherings and a way to stay connected to our culture.</p>
+                    <p>Today, we're sharing Mama's authentic dumplings with you—the same recipes she made for our family celebrations, now available for your table. Every bite carries the love and tradition that kept our family connected to home.</p>
                 </div>
                 <img src="images/mama-making-dumplings.jpg" alt="Mama making dumplings in the kitchen" class="about-us-image">
             </div>
@@ -46,29 +47,42 @@
     </main>
 
     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-column">
-                    <h4 data-translate="followUs">Follow Us</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-pinterest"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-                    </div>
-                </div>
-                <div class="footer-column newsletter">
-                    <h4 data-translate="newsletter">Sign up to our newsletter</h4>
-                    <form>
-                        <input type="email" placeholder="Enter your email">
-                        <button type="submit" data-translate="subscribe">Subscribe</button>
-                    </form>
+        <div class="container footer-container">
+            <div class="footer-column">
+                <h4>CUSTOMER CARE</h4>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Shipping</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Returns</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>BRAND</h4>
+                <ul>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>SOCIAL</h4>
+                <div class="social-icons">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                 </div>
             </div>
-            <div class="container copyright">
-                <p data-translate="copyright">© 2024 Mama's Dumplings. All Rights Reserved.</p>
+            <div class="footer-column newsletter">
+                <h4>SIGN UP TO OUR NEWSLETTER</h4>
+                <form>
+                    <input type="email" placeholder="Enter your email">
+                    <button type="submit">SUBSCRIBE</button>
+                </form>
             </div>
+        </div>
+        <div class="container copyright">
+            <p>&copy; 2024 Mama's Dumplings. All Rights Reserved.</p>
         </div>
     </footer>
 
