--- a/index.html
+++ b/index.html
@@ -342,6 +342,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 </body>
 </html> 
