--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Mama's Dumplings</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    
+    <!-- DEBUG CSS - Force all images to be visible -->
+    <style>
+        img {
+            background-color: yellow !important;
+            border: 5px solid blue !important;
+            display: block !important;
+            visibility: visible !important;
+            opacity: 1 !important;
+        }
+        .product-card {
+            background-color: red !important;
+            border: 3px solid green !important;
+        }
+    </style>
 </head>
 <body>
     <header>
