--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                     <div class="product-card-inner">
                         <div class="product-card-front">
                             <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings">
+                            <div style="background: red; color: white; padding: 10px; text-align: center;">DEBUG: Product Image Should Be Here</div>
                         </div>
                         <div class="product-card-back">
                             <h4>Pork & Cabbage</h4>
@@ -133,6 +134,9 @@
                      <div class="product-card-inner">
                         <div class="product-card-front">
                             <img src="images/chicken-mushroom-dumplings.jpg" alt="Chicken & Mushroom Dumplings">
+                            <div style="background: red; color: white; padding: 10px; text-align: center;">DEBUG: Chicken Image Should Be Here</div>
+                            <!-- Test with absolute path -->
+                            <img src="/images/logo.png" alt="Test Logo" style="width: 50px; height: 50px; margin-top: 10px;">
                         </div>
                         <div class="product-card-back">
                             <h4>Chicken & Mushroom</h4>
