Simplify first product card for testing

--- a/index.html
+++ b/index.html
@@ -115,17 +115,10 @@
             </aside>
             <section class="product-grid">
                 <!-- Dumplings -->
-                <div class="product-card" data-filter="dumpling-pork">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings">
-                            <div style="background: red; color: white; padding: 10px; text-align: center;">DEBUG: Product Image Should Be Here</div>
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Pork & Cabbage</h4>
-                            <p>Juicy pork and fresh cabbage in a classic wrapper.</p>
-                        </div>
-                    </div>
+                <div class="product-card" data-filter="dumpling-pork" style="background: orange; padding: 20px; margin: 10px;">
+                    <h2 style="color: white; background: black; padding: 10px;">TEST PRODUCT CARD</h2>
+                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings" style="width: 200px; height: 150px; border: 5px solid purple;">
+                    <p style="background: yellow; color: black; padding: 10px; font-size: 18px;">This is a test product image</p>
                     <h3>Pork & Cabbage Dumplings</h3>
                     <p>€12.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
