Add important styles to test image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mama's Dumplings</title>
+    <title>Mama's Dumplings - DEBUG VERSION</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
@@ -23,6 +23,10 @@
     </style>
 </head>
 <body>
+    <!-- DEBUG BANNER -->
+    <div style="background: lime; color: black; padding: 20px; text-align: center; font-size: 24px; font-weight: bold;">
+        🚨 DEBUG VERSION - CHANGES SHOULD BE VISIBLE 🚨
+    </div>
     <header>
         <div class="container">
             <div class="logo">
@@ -117,7 +121,7 @@
                 <!-- Dumplings -->
                 <div class="product-card" data-filter="dumpling-pork" style="background: orange; padding: 20px; margin: 10px;">
                     <h2 style="color: white; background: black; padding: 10px;">TEST PRODUCT CARD</h2>
-                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings" style="width: 200px; height: 150px; border: 5px solid purple;">
+                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings" style="width: 200px; height: 150px; border: 5px solid purple !important; background-color: pink !important; display: block !important;">
                     <p style="background: yellow; color: black; padding: 10px; font-size: 18px;">This is a test product image</p>
                     <h3>Pork & Cabbage Dumplings</h3>
                     <p>€12.99</p>
