--- a/index.html
+++ b/index.html
@@ -119,155 +119,70 @@
             </aside>
             <section class="product-grid">
                 <!-- Dumplings -->
-                <div class="product-card" data-filter="dumpling-pork" style="background: orange; padding: 20px; margin: 10px;">
-                    <h2 style="color: white; background: black; padding: 10px;">TEST PRODUCT CARD</h2>
-                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings" style="width: 200px; height: 150px; border: 5px solid purple !important; background-color: pink !important; display: block !important;">
-                    <p style="background: yellow; color: black; padding: 10px; font-size: 18px;">This is a test product image</p>
+                <div class="product-card" data-filter="dumpling-pork">
+                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Pork & Cabbage Dumplings</h3>
                     <p>€12.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-chicken">
-                     <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/chicken-mushroom-dumplings.jpg" alt="Chicken & Mushroom Dumplings">
-                            <div style="background: red; color: white; padding: 10px; text-align: center;">DEBUG: Chicken Image Should Be Here</div>
-                            <!-- Test with absolute path -->
-                            <img src="/images/logo.png" alt="Test Logo" style="width: 50px; height: 50px; margin-top: 10px;">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Chicken & Mushroom</h4>
-                            <p>Tender chicken and savory mushrooms for a comforting meal.</p>
-                        </div>
-                    </div>
+                    <img src="images/chicken-mushroom-dumplings.jpg" alt="Chicken & Mushroom Dumplings" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Chicken & Mushroom Dumplings</h3>
                     <p>€12.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-beef">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                             <img src="images/spicy-beef-dumplings.jpg" alt="Spicy Beef Dumplings">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Spicy Beef</h4>
-                            <p>Boldly spiced beef in a perfectly pleated wrapper.</p>
-                        </div>
-                    </div>
+                    <img src="images/spicy-beef-dumplings.jpg" alt="Spicy Beef Dumplings" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Spicy Beef Dumplings</h3>
                     <p>€13.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-shrimp">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/shrimp-chive-dumplings.jpg" alt="Shrimp & Chive Dumplings">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Shrimp & Chive</h4>
-                            <p>Plump shrimp and fragrant chives create a fresh filling.</p>
-                        </div>
-                    </div>
+                    <img src="images/shrimp-chive-dumplings.jpg" alt="Shrimp & Chive Dumplings" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Shrimp & Chive Dumplings</h3>
                     <p>€14.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-vegetable">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/vegetable-tofu-dumplings.jpg" alt="Vegetable Tofu Dumplings">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Vegetable Tofu</h4>
-                            <p>A wholesome mix of fresh vegetables and savory tofu.</p>
-                        </div>
-                    </div>
+                    <img src="images/vegetable-tofu-dumplings.jpg" alt="Vegetable Tofu Dumplings" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Vegetable Tofu Dumplings</h3>
                     <p>€11.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-pork">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/kimchi-pork-dumplings.jpg" alt="Kimchi & Pork Dumplings">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Kimchi & Pork</h4>
-                            <p>Spicy kimchi paired with savory pork for bold flavor.</p>
-                        </div>
-                    </div>
+                    <img src="images/kimchi-pork-dumplings.jpg" alt="Kimchi & Pork Dumplings" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Kimchi & Pork Dumplings</h3>
                     <p>€13.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <!-- Wontons -->
                 <div class="product-card" data-filter="wonton-pork">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/pork-cabbage-dumplings.jpg" alt="Pork Wontons">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Pork Wontons</h4>
-                            <p>Classic pork wontons in a delicate, silky wrapper.</p>
-                        </div>
-                    </div>
+                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork Wontons" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Pork Wontons</h3>
                     <p>€11.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="wonton-shrimp">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/shrimp-chive-dumplings.jpg" alt="Shrimp Wontons">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Shrimp Wontons</h4>
-                            <p>Succulent shrimp wrapped in a thin, tender wonton skin.</p>
-                        </div>
-                    </div>
+                    <img src="images/shrimp-chive-dumplings.jpg" alt="Shrimp Wontons" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Shrimp Wontons</h3>
                     <p>€13.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <!-- Desserts -->
                 <div class="product-card" data-filter="dessert-pumpkin-ricecake">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/vegetable-tofu-dumplings.jpg" alt="Pumpkin Ricecake">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Pumpkin Ricecake</h4>
-                            <p>A sweet and chewy delight made from glutinous rice.</p>
-                        </div>
-                    </div>
+                    <img src="images/vegetable-tofu-dumplings.jpg" alt="Pumpkin Ricecake" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Pumpkin Ricecake</h3>
                     <p>€9.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dessert-tang-yuan">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/kimchi-pork-dumplings.jpg" alt="Tang Yuan">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Tang Yuan</h4>
-                            <p>Sweet glutinous rice balls in a warm, comforting soup.</p>
-                        </div>
-                    </div>
+                    <img src="images/kimchi-pork-dumplings.jpg" alt="Tang Yuan" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Tang Yuan</h3>
                     <p>€8.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dessert-zhong-zi">
-                    <div class="product-card-inner">
-                        <div class="product-card-front">
-                            <img src="images/chicken-mushroom-dumplings.jpg" alt="Zhong Zi">
-                        </div>
-                        <div class="product-card-back">
-                            <h4>Zhong Zi</h4>
-                            <p>Traditional sticky rice dumplings wrapped in bamboo leaves.</p>
-                        </div>
-                    </div>
+                    <img src="images/chicken-mushroom-dumplings.jpg" alt="Zhong Zi" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
                     <h3>Zhong Zi</h3>
                     <p>€10.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
