Remove all debug styling - clean up colored boxes and borders

--- a/index.html
+++ b/index.html
@@ -3,30 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mama's Dumplings - DEBUG VERSION</title>
+    <title>Mama's Dumplings</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    
-    <!-- DEBUG CSS - Force all images to be visible -->
-    <style>
-        img {
-            background-color: yellow !important;
-            border: 5px solid blue !important;
-            display: block !important;
-            visibility: visible !important;
-            opacity: 1 !important;
-        }
-        .product-card {
-            background-color: red !important;
-            border: 3px solid green !important;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="js/languages.js"></script>
 </head>
 <body>
-    <!-- DEBUG BANNER -->
-    <div style="background: lime; color: black; padding: 20px; text-align: center; font-size: 24px; font-weight: bold;">
-        🚨 DEBUG VERSION - CHANGES SHOULD BE VISIBLE 🚨
-    </div>
     <header>
         <div class="container">
             <div class="logo">
