--- a/index.html
+++ b/index.html
@@ -102,69 +102,69 @@
             <section class="product-grid">
                 <!-- Dumplings -->
                 <div class="product-card" data-filter="dumpling-pork">
-                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork & Cabbage Dumplings" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Pork & Cabbage Dumplings</h3>
                     <p>€12.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-chicken">
-                    <img src="images/chicken-mushroom-dumplings.jpg" alt="Chicken & Mushroom Dumplings" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/chicken-mushroom-dumplings.jpg" alt="Chicken & Mushroom Dumplings" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Chicken & Mushroom Dumplings</h3>
                     <p>€12.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-beef">
-                    <img src="images/spicy-beef-dumplings.jpg" alt="Spicy Beef Dumplings" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/spicy-beef-dumplings.jpg" alt="Spicy Beef Dumplings" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Spicy Beef Dumplings</h3>
                     <p>€13.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-shrimp">
-                    <img src="images/shrimp-chive-dumplings.jpg" alt="Shrimp & Chive Dumplings" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/shrimp-chive-dumplings.jpg" alt="Shrimp & Chive Dumplings" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Shrimp & Chive Dumplings</h3>
                     <p>€14.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-vegetable">
-                    <img src="images/vegetable-tofu-dumplings.jpg" alt="Vegetable Tofu Dumplings" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/vegetable-tofu-dumplings.jpg" alt="Vegetable Tofu Dumplings" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Vegetable Tofu Dumplings</h3>
                     <p>€11.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dumpling-pork">
-                    <img src="images/kimchi-pork-dumplings.jpg" alt="Kimchi & Pork Dumplings" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/kimchi-pork-dumplings.jpg" alt="Kimchi & Pork Dumplings" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Kimchi & Pork Dumplings</h3>
                     <p>€13.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <!-- Wontons -->
                 <div class="product-card" data-filter="wonton-pork">
-                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork Wontons" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/pork-cabbage-dumplings.jpg" alt="Pork Wontons" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Pork Wontons</h3>
                     <p>€11.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="wonton-shrimp">
-                    <img src="images/shrimp-chive-dumplings.jpg" alt="Shrimp Wontons" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/shrimp-chive-dumplings.jpg" alt="Shrimp Wontons" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Shrimp Wontons</h3>
                     <p>€13.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <!-- Desserts -->
                 <div class="product-card" data-filter="dessert-pumpkin-ricecake">
-                    <img src="images/vegetable-tofu-dumplings.jpg" alt="Pumpkin Ricecake" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/vegetable-tofu-dumplings.jpg" alt="Pumpkin Ricecake" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Pumpkin Ricecake</h3>
                     <p>€9.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dessert-tang-yuan">
-                    <img src="images/kimchi-pork-dumplings.jpg" alt="Tang Yuan" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/kimchi-pork-dumplings.jpg" alt="Tang Yuan" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Tang Yuan</h3>
                     <p>€8.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-filter="dessert-zhong-zi">
-                    <img src="images/chicken-mushroom-dumplings.jpg" alt="Zhong Zi" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;">
+                    <img src="images/chicken-mushroom-dumplings.jpg" alt="Zhong Zi" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;">
                     <h3>Zhong Zi</h3>
                     <p>€10.99</p>
                     <button data-translate="addToCart">Add to Cart</button>
